# todos

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py  urls.py
todo/: admin.py  models.py  serializers.py  tests.py  urls.py  viewsets.py
todo/migrations/: 0001_initial.py  0002_todomodel_assignee.py
